Build project with JDK 8 (#10)